--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 DB_URI=mongodb+srv://vandanab25:Vandana%4025@feedbacksystem.gk3sg7m.mongodb.net/?retryWrites=true&w=majority&appName=feedbackSystem
 JWT_SECRET=BMSCE@2501
-PORT=5001
+REACT_APP_API_BASE_URL=https://feedback-survey-system.onrender.com
+
